# bober

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-package-conda.yml
bober/: main.py  utils.py  version.py  workers.py
bober/assets/i18n/: de_DE.qm  de_DE.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  ru_RU.qm  ru_RU.ts  uk_UA.qm  uk_UA.ts
bober/widgets/: detail_dock.py  progress_dock.py  upload_dialog.py
bober/windows/: login_window.py  main_window.py  settings_window.py  window.py
conda/: environment.yml
irodsgui/: detail_dock.py  globals.py  login_window.py  main.py  main_window.py  progress_dock.py  settings_window.py  version.py  window.py  workers.py
irodsgui/widgets/: detail_dock.py  progress_dock.py
irodsgui/windows/: login_window.py  main_window.py  settings_window.py  window.py
