[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bober"
authors = [
    {name = "Aurélien Besnier", email = "aurelien.besnier@inrae.fr"},
]
license = {file = "LICENSE"}
description = ""
requires-python = ">=3.9"
keywords = ["iRODS"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "bober.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["bober*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)
