[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bober"
authors = [
    {name = "Aurélien Besnier", email = "aurelien.besnier@inrae.fr"},
]
license = {file = "LICENSE"}
description = "a simple GUI for iRODS"
requires-python = ">=3.9"
keywords = ["iRODS", "python"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme"]
dependencies = ["python-irodsclient", "PySide6", "qtpy", "natsort"]

[project.optional-dependencies]
exe = ["pyinstaller"]

[tool.setuptools.dynamic]
version = {attr = "bober.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["bober*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
"*" = ["*.ico", "*.gif", "*.png", "*.qm"]
